--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dist": "rm -rf dist/* && cross-env BABEL_ENV=production webpack -p --config webpack.prod.js"
+    "dist": "rm -rf dist/* && cross-env BABEL_ENV=production webpack --progress --config webpack.prod.js"
   },
   "keywords": [],
   "author": "",
@@ -16,10 +16,12 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-react": "^6.23.0",
     "babel-preset-react-hmre": "^1.1.1",
+    "chunk-manifest-webpack-plugin": "^1.0.0",
     "cross-env": "^4.0.0",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
+    "inline-manifest-webpack-plugin": "^3.0.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "style-loader": "^0.16.1",
@@ -27,8 +29,11 @@
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
+    "bundle-loader": "^0.5.5",
+    "history": "^4.6.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^4.0.0"
+    "react-router": "^4.0.0",
+    "react-router-dom": "^4.0.0"
   }
 }
