--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dist": "rm -rf dist/* && cross-env BABEL_ENV=production webpack --progress --config webpack.prod.js"
+    "dist": "rm -rf dist/* && cross-env BABEL_ENV=production webpack -p --progress --config webpack.prod.js"
   },
   "keywords": [],
   "author": "",
