--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dist": "rm -rf dist/* && cross-env BABEL_ENV=production webpack -p --progress --config webpack.prod.js"
+    "dist": "rm -rf dist/* && cross-env BABEL_ENV=production webpack -p --progress --config webpack.prod.js",
+    "lint": "eslint -ext .js src",
+    "precommit": "npm run lint"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +21,11 @@
     "chunk-manifest-webpack-plugin": "^1.0.0",
     "cross-env": "^4.0.0",
     "css-loader": "^0.28.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
     "inline-manifest-webpack-plugin": "^3.0.1",
